--- a/starwars/starwars.css
+++ b/starwars/starwars.css
@@ -23,17 +23,36 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     width: 65%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
 }
 
 /* text för planeterna */
-.text{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    font-family: 'Righteous', cursive;
+p.name{
+    margin: 50px 0px 0px 0px;
+    font-family: 'Montserrat Subrayada', sans-serif;
     color: white;
     font-size: 3rem;
+}
+p.climate{
+    font-family: 'Righteous', cursive;
+    color: white;
+    font-size: 2rem;
+    /* margin: 0px; */
+}
+p.terrain{
+    font-family: 'Righteous', cursive;
+    color: white;
+    font-size: 2rem;
+    /* margin: 0px; */
+}
+p.population{
+    font-family: 'Righteous', cursive;
+    color: white;
+    font-size: 2rem;
+    /* margin: 0px; */
 }
 .people{
     color: white;
